# flagStacker

./: .gitignore  CHANGELOGS.md  CMakeLists.txt  LICENSE  README.md
module/: CMakeLists.txt  flagStacker.hpp
module/flagStacker/: CMakeLists.txt  common.hpp  flag.hpp  stacker.cpp  stacker.hpp
module/flagStacker/common/: _nout.hpp  dep.hpp  typedef.hpp
module/flagStacker/flag/: flag.cpp  flag.hpp  flagArgs.hpp  flagable.hpp
